[package]
name = "wolf"
author = "squ1dd13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
local-ip-address = "0.4.4"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"